--- a/index.html
+++ b/index.html
@@ -120,26 +120,27 @@
     <h2>Portfolio</h2>
     <ul class="project-list">
       <li class="project-item">
-        <a href="WorkshopVaR.ipynb" target="_blank">
+        <a href="projects/WorkshopVaR.ipynb" target="_blank">
           <strong>Value at Risk Simulation</strong>
           <span>Historical simulation and parametric VaR in Python.</span>
         </a>
+      </li>
       <li class="project-item">
-        <a href="Workshop_MonteCarlo.ipynb" target="_blank">
-          <strong>Scenario Analysis </strong>
-          <span>NPV and IRR of a Capital Budgeting proyect using 10,000 Monte Carlo Simulations.</span>
+        <a href="projects/Workshop_MonteCarlo.ipynb" target="_blank">
+          <strong>Scenario Analysis</strong>
+          <span>NPV and IRR of a Capital Budgeting project using 10,000 Monte Carlo Simulations.</span>
         </a>
       </li>
       <li class="project-item">
-        <a href="ProyectoEconometria.html" target="_blank">
-          <strong>Lineal Regression Model</strong>
-          <span>Lineal regression model in R to test the effect of demographic, social, and technological factors on economic growth.</span>
+        <a href="projects/ProyectoEconometria.html" target="_blank">
+          <strong>Linear Regression Model</strong>
+          <span>Linear regression model in R to test the effect of demographic, social, and technological factors on economic growth.</span>
         </a>
       </li>
       <li class="project-item">
         <a href="projects/garch-models.ipynb" target="_blank">
           <strong>GARCH Models</strong>
-          <span>Description: Volatility forecasting with GARCH(1,1) and EGARCH.</span>
+          <span>Volatility forecasting with GARCH(1,1) and EGARCH.</span>
         </a>
       </li>
     </ul>
