--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
     <h2>Portfolio</h2>
     <ul class="project-list">
       <li class="project-item">
-        <a href="projects/WorkshopVaR.ipynb" target="_blank">
+        <a href="projects/WorkshopVaR.html" target="_blank">
           <strong>Value at Risk Simulation</strong>
           <span>Historical simulation and parametric VaR in Python.</span>
         </a>
       </li>
       <li class="project-item">
-        <a href="projects/Workshop_MonteCarlo.ipynb" target="_blank">
+        <a href="projects/Workshop_MonteCarlo.html" target="_blank">
           <strong>Scenario Analysis</strong>
           <span>NPV and IRR of a Capital Budgeting project using 10,000 Monte Carlo Simulations.</span>
         </a>
