--- a/index.html
+++ b/index.html
@@ -48,40 +48,30 @@
       font-weight: 600; color: var(--blue);
     }
     section {
-      max-width: 800px; margin: 3rem auto; padding: 0 1rem;
+      max-width: 900px; margin: 3rem auto; padding: 0 1rem;
     }
     section h2 {
       font-family: 'Lora', serif;
       font-size: 1.8rem; margin-bottom: 1rem;
       color: var(--blue);
     }
-    .project-list {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-    .project-item {
+    .project {
       background: var(--bg);
       padding: 1rem 1.5rem;
-      margin-bottom: 1rem;
+      margin-bottom: 2rem;
       border-radius: 8px;
       box-shadow: 0 2px 8px var(--card-shadow);
-      transition: transform .2s, box-shadow .2s;
     }
-    .project-item:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 4px 12px var(--card-shadow);
-    }
-    .project-item a {
-      text-decoration: none;
-      color: inherit;
-      display: block;
-    }
-    .project-item strong {
-      display: block;
-      font-size: 1.1rem;
-      margin-bottom: 0.3rem;
+    .project h3 {
+      margin-top: 0;
       color: var(--blue);
+    }
+    iframe {
+      width: 100%;
+      height: 600px;
+      border: none;
+      border-radius: 8px;
+      margin-top: 1rem;
     }
     footer {
       text-align: center; padding: 2rem 1rem;
@@ -118,32 +108,30 @@
   <!-- Portfolio -->
   <section id="portfolio">
     <h2>Portfolio</h2>
-    <ul class="project-list">
-      <li class="project-item">
-        <a href="projects/WorkshopVaR.html" target="_blank">
-          <strong>Value at Risk Simulation</strong>
-          <span>Historical simulation and parametric VaR in Python.</span>
-        </a>
-      </li>
-      <li class="project-item">
-        <a href="projects/Workshop_MonteCarlo.html" target="_blank">
-          <strong>Scenario Analysis</strong>
-          <span>NPV and IRR of a Capital Budgeting project using 10,000 Monte Carlo Simulations.</span>
-        </a>
-      </li>
-      <li class="project-item">
-        <a href="projects/ProyectoEconometria.html" target="_blank">
-          <strong>Linear Regression Model</strong>
-          <span>Linear regression model in R to test the effect of demographic, social, and technological factors on economic growth.</span>
-        </a>
-      </li>
-      <li class="project-item">
-        <a href="projects/garch-models.ipynb" target="_blank">
-          <strong>GARCH Models</strong>
-          <span>Volatility forecasting with GARCH(1,1) and EGARCH.</span>
-        </a>
-      </li>
-    </ul>
+
+    <div class="project">
+      <h3>Value at Risk Simulation</h3>
+      <p>Historical simulation and parametric VaR in Python.</p>
+      <iframe src="projects/WorkshopVaR.html"></iframe>
+    </div>
+
+    <div class="project">
+      <h3>Scenario Analysis</h3>
+      <p>NPV and IRR of a Capital Budgeting project using 10,000 Monte Carlo Simulations.</p>
+      <iframe src="projects/Workshop_MonteCarlo.html"></iframe>
+    </div>
+
+    <div class="project">
+      <h3>Linear Regression Model</h3>
+      <p>Linear regression model in R to test the effect of demographic, social, and technological factors on economic growth.</p>
+      <iframe src="projects/ProyectoEconometria.html"></iframe>
+    </div>
+
+    <div class="project">
+      <h3>GARCH Models</h3>
+      <p>Volatility forecasting with GARCH(1,1) and EGARCH.</p>
+      <iframe src="projects/garch-models.html"></iframe>
+    </div>
   </section>
 
   <!-- Contact -->
