--- a/index.html
+++ b/index.html
@@ -56,39 +56,37 @@
       color: var(--blue);
     }
     .project {
-      position: relative;
       background: var(--bg);
-      padding: 1rem 1.5rem 3rem 1.5rem;
+      padding: 1rem 1.5rem 2.5rem 1.5rem;
       margin-bottom: 2rem;
       border-radius: 8px;
       box-shadow: 0 2px 8px var(--card-shadow);
+      position: relative;
     }
     .project h3 {
       margin-top: 0;
       color: var(--blue);
     }
-    .project iframe {
+    iframe {
       width: 100%;
-      height: 200px;
-      border: 1px solid #ddd;
-      border-radius: 6px;
-      margin-top: 0.5rem;
-      pointer-events: none; /* para no interferir con click */
+      height: 600px;
+      border: none;
+      border-radius: 8px;
+      margin-top: 1rem;
     }
     .open-new {
-      position: absolute;
-      bottom: 10px;
-      left: 10px;
+      display: inline-block;
+      margin-top: 0.8rem;
       background: var(--bg);
-      border: 1px solid var(--card-shadow);
+      border: 1px solid var(--blue);
       border-radius: 6px;
       color: var(--blue);
       font-weight: 600;
-      padding: 4px 8px;
+      padding: 6px 12px;
       font-size: 0.85rem;
       cursor: pointer;
-      box-shadow: 0 2px 6px var(--card-shadow);
       text-decoration: none;
+      transition: all 0.2s ease;
     }
     .open-new:hover {
       background: var(--blue);
