--- a/index.html
+++ b/index.html
@@ -148,19 +148,12 @@
       <iframe src="projects/ProyectoEconometria.html"></iframe>
       <a href="projects/ProyectoEconometria.html" target="_blank" class="open-new">Open in New Tab</a>
     </div>
-
-    <div class="project">
-      <h3>GARCH Models</h3>
-      <p>Volatility forecasting with GARCH(1,1) and EGARCH.</p>
-      <iframe src="projects/garch-models.html"></iframe>
-      <a href="projects/garch-models.html" target="_blank" class="open-new">Open in New Tab</a>
-    </div>
   </section>
 
   <!-- Contact -->
   <section id="contact">
     <h2>Contact</h2>
-    <p>Let's connect: <a href="mailto:diego.alonsog24@gmail.com">diego.alonsog24@gmail.com</a> | <a href="#">LinkedIn</a> | <a href="#">GitHub</a></p>
+    <p>Let's connect: <a href="mailto:diego.alonsog24@gmail.com">diego.alonsog24@gmail.com</a> | <a href="https://www.linkedin.com/in/diegoalonsog/">LinkedIn</a> 
   </section>
 
   <footer>
